Set up and run database migrations.

--- a/HospitalApi/appsettings.json
+++ b/HospitalApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection" : ""
+    "DefaultConnection": "Data Source=ALTAIR-PC;Initial Catalog=Hospital;Integrated Security=True;Trust Server Certificate=True"
   }
 }
